# symm_reg

./: .gitignore  .gitmodules  README.md  analyze_ring_attractor.py  conjugate_dynamics.ipynb  conjugate_dynamics.py  jet_dev.py  jetsagain.ipynb  lie_derivative_visualization.py  poisson_demo.ipynb  poisson_test.ipynb  pyproject.toml  ra.py  ra_pytorch.py  snr.py  test.ipynb  testy.py  vfield.py
experiments/: train.py  visualize_results.ipynb
in_progress/: __init__.py  calculate_rotation_invariance_loss.ipynb  demo.ipynb  demo_3d_sphere.ipynb  demo_regularize.ipynb  demo_regularize_noisy.ipynb  demo_regularize_partial_ring.ipynb  experiment_utils.py  forecasting_utils.py  heterogeneous_data_experiment.ipynb  make_gif.py  regularization_analysis.ipynb  regularization_analysis_curvature.ipynb  regularization_analysis_perturb_mag.ipynb  regularization_analysis_v2.ipynb  regularized_experiments.py  regularized_ssm.py  regularizers.py  rotation_invariance_analysis.ipynb  rotation_invariance_analysis_sweep.ipynb  sphere_dynamics.py  stress_test_symmetry.ipynb  symmetry_examples.py  test_dynamics.py  time_varying_utils.py  translational_symmetry_experiment.ipynb  vf_concentric_comparison.ipynb  visualize_regularizers.py  visualize_so3_fields.py
neurreps_in_progress/: config.yaml  demo_regularize.ipynb  inference_lightning.py  loss_analysis_utils.py  regularized_ssm.py  regularizers.py  sphere_regularizers.py  test_dynamics.py
ra_xfads_training/: demo.ipynb  inference_lightning.py  regularizer_sample_trajectories.ipynb
testing/: test_reg.ipynb
(+17 files in other folders)
