[project]
name = "symm-reg"
version = "0.1.0"
description = "Symmetry regularization for ODE discovery"
requires-python = ">=3.10,<3.11"
dependencies = [
    # Core ML
    "torch>=2.2.0,<3",
    "torchvision",
    "pytorch-lightning>=2.2.5",
    "lightning>=2.5.0",
    "torchmetrics>=1.4.0",
    "einops>=0.8.0",

    # ODE / SDE
    "torchdiffeq>=0.2.5",
    "torchcde>=0.2.5",
    "torchdyn>=1.0.6",
    "torchsde>=0.2.6",

    # GP
    "gpytorch>=1.14",
    "linear-operator>=0.6",

    # Scientific
    "numpy>=1.26.4,<2",
    "scipy>=1.13.1",
    "scikit-learn>=1.5.0",
    "pandas>=2.3.0",
    "sympy>=1.12",

    # Plotting
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "imageio>=2.37.0",

    # Config / logging
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "wandb>=0.20.0",
    "pyyaml>=6.0.1",

    # Utilities
    "tqdm>=4.66.4",
    "joblib>=1.4.2",
    "skorch>=1.0.0",
    "tabulate>=0.9.0",
    "pydantic>=2.11.0",
    "requests>=2.32.0",
    "trampoline>=0.1.2",
    "wadler-lindig>=0.1.7",
    "jaxtyping>=0.3.2",
    "pillow>=10.3.0",

    # Jupyter
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",

    # Local
    "xfads",
]

[tool.uv]
package = false

[tool.uv.sources]
xfads = { path = "xfads", editable = true }
